# sample_codes

./: CMakeLists.txt  buffer_create.hpp  nd_range.cpp  separate.cpp  sycl_info.hpp
cmake/: CPM.cmake  ccache.cmake  custom_binder.cmake  custom_executable.cmake  external_packages.cmake  install.cmake
cmake/toolchains/: Intel_x86_Arch.cmake
